[gd_scene load_steps=78 format=3 uid="uid://3iyyi4r25fgx"]

[ext_resource type="Texture2D" uid="uid://c87h5ox1hjirr" path="res://assets/sprites/Carved_9Slides.png" id="1_61r6t"]
[ext_resource type="Script" uid="uid://dqrhh8fe8gewg" path="res://pathselect.gd" id="1_yt7fv"]
[ext_resource type="Texture2D" uid="uid://wmtbe45len4e" path="res://assets/portraits/WoodPortrait.png" id="2_6roal"]
[ext_resource type="Script" uid="uid://cu6dqa02m30j4" path="res://data/chara/slime.gd" id="2_xe5f2"]
[ext_resource type="Script" uid="uid://cv25yh1axiojh" path="res://data/chara/squire.gd" id="3_cgh2f"]
[ext_resource type="Script" uid="uid://dp733wfg5p58i" path="res://data/chara/tinymushling.gd" id="3_wbt02"]
[ext_resource type="Script" uid="uid://ojx2pdwxue1g" path="res://data/chara/wolfcub.gd" id="4_7pic5"]
[ext_resource type="FontFile" uid="uid://mcoukv50aceg" path="res://assets/fonts/PixelOperator8.ttf" id="4_sl0k7"]
[ext_resource type="Script" uid="uid://bvny7p2e4e6in" path="res://data/chara/boar.gd" id="4_wbt02"]
[ext_resource type="Texture2D" uid="uid://yyx6kv163jb8" path="res://assets/sprites/UI_TravelBook_FrameSelect01a.png" id="5_2ykvl"]
[ext_resource type="Script" uid="uid://dijrhp30kglw" path="res://data/chara/peasant.gd" id="5_7friw"]
[ext_resource type="Script" uid="uid://dhq5tfdx11t0o" path="res://data/chara/greenogre.gd" id="5_7pic5"]
[ext_resource type="Script" uid="uid://bjlj0qs3vp8a3" path="res://data/chara/firespirit.gd" id="6_7friw"]
[ext_resource type="Texture2D" uid="uid://dpki0xsx23s2w" path="res://assets/sprites/UI_TravelBook_Frame01a.png" id="6_yt7fv"]
[ext_resource type="Texture2D" uid="uid://csfbf4q2acpl1" path="res://assets/sprites/UI_TravelBook_FrameSelect01b.png" id="7_17cqf"]
[ext_resource type="Script" uid="uid://c6qiivm84r6jb" path="res://data/chara/viper.gd" id="7_djeya"]
[ext_resource type="Script" uid="uid://8xb834r8qifj" path="res://data/chara/scout.gd" id="11_qk83f"]
[ext_resource type="Script" uid="uid://2l5cixb4hod7" path="res://data/chara/bigslime.gd" id="12_2jovd"]
[ext_resource type="Script" uid="uid://mpk2c3x2h0gh" path="res://data/chara/wanderingtrader.gd" id="13_g7pmh"]
[ext_resource type="Script" uid="uid://0ohicadpwy11" path="res://data/chara/potionseller.gd" id="14_2jhwg"]
[ext_resource type="Script" uid="uid://b70uy5m820f54" path="res://data/chara/pyromaniac.gd" id="15_5ehuv"]
[ext_resource type="Script" uid="uid://c6v5byhgl5tja" path="res://data/chara/boastfulduelist.gd" id="16_k703t"]
[ext_resource type="Script" uid="uid://dkhap43c7q183" path="res://data/chara/thief.gd" id="17_i4viq"]
[ext_resource type="Script" uid="uid://cjvt6vorrr7hy" path="res://data/chara/aegis.gd" id="18_ss1uu"]
[ext_resource type="Script" uid="uid://c3gimlvb7iyh1" path="res://data/chara/mushlingknight.gd" id="18_x5vjo"]
[ext_resource type="Script" uid="uid://8aljocrcuj71" path="res://data/chara/vespagon.gd" id="19_3728a"]
[ext_resource type="Script" uid="uid://cxnnr1c67v871" path="res://data/chara/serenecult.gd" id="20_ey2e3"]
[ext_resource type="Script" uid="uid://2r7uk64u3hn5" path="res://data/chara/tavern.gd" id="21_5ivwl"]
[ext_resource type="Script" uid="uid://cp3ko1aclhb17" path="res://data/chara/builder.gd" id="22_5ivwl"]
[ext_resource type="Script" uid="uid://uisvv7vhr5c5" path="res://data/chara/citywatchtower.gd" id="23_x2coe"]
[ext_resource type="Script" uid="uid://qbj5o6jbue6f" path="res://data/chara/armorsmith.gd" id="24_pjj0l"]
[ext_resource type="Script" uid="uid://dh6bgil6kynhb" path="res://data/chara/citywizard.gd" id="25_bhi58"]
[ext_resource type="Script" uid="uid://bcwtmbrgqlut1" path="res://data/chara/magictrader.gd" id="26_dt7qs"]
[ext_resource type="Script" uid="uid://cpo5v04kdy8n7" path="res://data/chara/engineer.gd" id="27_xtptr"]
[ext_resource type="Script" uid="uid://dawh28d72qi5m" path="res://data/chara/alchemist.gd" id="28_pfir4"]
[ext_resource type="Script" uid="uid://csxlqp6c10627" path="res://data/chara/royalknight.gd" id="29_ve2tj"]
[ext_resource type="Script" uid="uid://cij4uglpmmhe5" path="res://data/chara/cleric.gd" id="30_esla6"]
[ext_resource type="Script" uid="uid://cqy7wddrlwx4f" path="res://data/chara/executioner.gd" id="31_lc8hr"]
[ext_resource type="Script" uid="uid://cxxor16fg2wpx" path="res://data/chara/adventurer.gd" id="32_hfwo5"]
[ext_resource type="Script" uid="uid://bt8i08bivjf6o" path="res://data/chara/weaponsmith.gd" id="33_2cpl2"]
[ext_resource type="Script" uid="uid://bqpwfg6mipm7p" path="res://data/chara/aurelia.gd" id="33_6iat4"]
[ext_resource type="Script" uid="uid://djoa4igc45twj" path="res://data/chara/volker.gd" id="34_dtop2"]
[ext_resource type="Script" uid="uid://bvl5368csmhft" path="res://data/chara/leo.gd" id="35_1mtkp"]
[ext_resource type="Script" uid="uid://ctvaekft61mkr" path="res://data/chara/corvin.gd" id="35_flmib"]
[ext_resource type="Script" uid="uid://d3jtv4jr48e06" path="res://data/chara/goatfolk.gd" id="39_7njqs"]
[ext_resource type="Script" uid="uid://bhtm3lyakkera" path="res://data/chara/graveyard.gd" id="40_10mrr"]
[ext_resource type="Script" uid="uid://n1skiw6chn7d" path="res://data/chara/smalltroll.gd" id="41_h0jx4"]
[ext_resource type="Script" uid="uid://dodl0kcguqi5q" path="res://data/chara/necromancer.gd" id="42_10mrr"]
[ext_resource type="Script" uid="uid://btjkfj1uclfba" path="res://data/chara/earthgolem.gd" id="43_h0jx4"]
[ext_resource type="Script" uid="uid://dtwsxpv84jreu" path="res://data/chara/frostgiant.gd" id="44_s26f0"]
[ext_resource type="Script" uid="uid://ddiy0jwwiasf8" path="res://data/chara/harpies.gd" id="45_3nf6f"]
[ext_resource type="Script" uid="uid://bsr7gfq3scf0q" path="res://data/chara/lich.gd" id="46_yaccu"]
[ext_resource type="Script" uid="uid://c0wey5ksjkfbc" path="res://data/chara/dragoncult.gd" id="47_b80bq"]
[ext_resource type="Script" uid="uid://ecymtm4pdx28" path="res://data/chara/cyclops.gd" id="48_p82m7"]
[ext_resource type="Script" uid="uid://l0syvo4gmlet" path="res://data/chara/demolitionist.gd" id="49_ut6h7"]
[ext_resource type="Script" uid="uid://dqwxqepswc3je" path="res://data/chara/huntermerchant.gd" id="50_78qqs"]
[ext_resource type="Script" uid="uid://vkv4m2nuscsb" path="res://data/chara/eira.gd" id="50_tq4vj"]
[ext_resource type="Script" uid="uid://deyptlt8nqr3" path="res://data/chara/grokk.gd" id="52_lv54l"]
[ext_resource type="Script" uid="uid://b2j4it0ig23ne" path="res://data/chara/dragonhunter.gd" id="53_qyc2s"]
[ext_resource type="Script" uid="uid://dl4j376lsfriw" path="res://data/chara/obsidiangolem.gd" id="54_0ubp3"]
[ext_resource type="Script" uid="uid://pbnp87ade6pq" path="res://data/chara/valerius.gd" id="55_6w50q"]
[ext_resource type="Script" uid="uid://codvf2q05h3k3" path="res://data/chara/malakor.gd" id="56_vtmnp"]
[ext_resource type="Script" uid="uid://dvspmrldo75t4" path="res://data/chara/silvana.gd" id="57_r1is8"]
[ext_resource type="Script" uid="uid://c7s3111571asp" path="res://data/chara/twilightglade.gd" id="58_b13ri"]
[ext_resource type="Script" uid="uid://cwwtlcricoiok" path="res://data/chara/gloomstalker.gd" id="58_r1is8"]
[ext_resource type="Texture2D" uid="uid://bxxyqib3gb4ok" path="res://assets/sprites/20250829_1139_Pixel Wood Planks_simple_compose_01k3t1xwtgenyagnw6pv4rq8ra.png" id="58_vtmnp"]
[ext_resource type="Script" uid="uid://dp1wdx1s66cov" path="res://data/chara/keeperofsecrets.gd" id="60_3i8p7"]
[ext_resource type="Script" uid="uid://cqyvtrgthwerq" path="res://data/chara/whisperingfugitive.gd" id="61_x2hlo"]
[ext_resource type="Script" uid="uid://cm2n7img264e6" path="res://data/chara/oswald.gd" id="62_wr3iy"]
[ext_resource type="Script" uid="uid://b5gfo8wpajesx" path="res://data/chara/blightcarrier.gd" id="63_7hxv5"]
[ext_resource type="Script" uid="uid://7vpfd03ienh6" path="res://data/chara/ebonram.gd" id="64_8jj7p"]
[ext_resource type="Script" uid="uid://do5rmflhylqwb" path="res://data/chara/ebonaltar.gd" id="65_n10w4"]
[ext_resource type="Script" uid="uid://dmwhqybowtros" path="res://data/chara/elara.gd" id="66_n10w4"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2ykvl"]
load_path = "res://.godot/imported/Squire.png-0cd908153f5349d653302ec82bb7ff31.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bmntv"]
texture = ExtResource("5_2ykvl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xe5f2"]
texture = ExtResource("6_yt7fv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cgh2f"]
texture = ExtResource("7_17cqf")

[node name="PathSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yt7fv")
enemy_pool0 = Array[Script]([ExtResource("2_xe5f2"), ExtResource("3_wbt02"), ExtResource("4_7pic5"), ExtResource("5_7friw"), ExtResource("6_7friw"), ExtResource("7_djeya")])
enemy_pool1 = Array[Script]([ExtResource("4_wbt02"), ExtResource("3_cgh2f"), ExtResource("5_7pic5"), ExtResource("11_qk83f"), ExtResource("12_2jovd"), ExtResource("13_g7pmh"), ExtResource("14_2jhwg"), ExtResource("15_5ehuv"), ExtResource("16_k703t"), ExtResource("17_i4viq"), ExtResource("18_x5vjo"), ExtResource("58_r1is8")])
miniboss_pool0 = Array[Script]([ExtResource("18_ss1uu"), ExtResource("19_3728a"), ExtResource("20_ey2e3"), ExtResource("21_5ivwl")])
enemy_pool2 = Array[Script]([ExtResource("22_5ivwl"), ExtResource("23_x2coe"), ExtResource("24_pjj0l"), ExtResource("25_bhi58"), ExtResource("26_dt7qs"), ExtResource("27_xtptr"), ExtResource("28_pfir4"), ExtResource("29_ve2tj"), ExtResource("30_esla6"), ExtResource("31_lc8hr"), ExtResource("32_hfwo5"), ExtResource("33_2cpl2"), ExtResource("61_x2hlo")])
miniboss_pool1 = Array[Script]([ExtResource("34_dtop2"), ExtResource("35_flmib"), ExtResource("33_6iat4"), ExtResource("35_1mtkp")])
enemy_pool3 = Array[Script]([ExtResource("39_7njqs"), ExtResource("40_10mrr"), ExtResource("41_h0jx4"), ExtResource("42_10mrr"), ExtResource("43_h0jx4"), ExtResource("44_s26f0"), ExtResource("45_3nf6f"), ExtResource("46_yaccu"), ExtResource("47_b80bq"), ExtResource("48_p82m7"), ExtResource("49_ut6h7"), ExtResource("50_78qqs"), ExtResource("64_8jj7p")])
miniboss_pool2 = Array[Script]([ExtResource("50_tq4vj"), ExtResource("52_lv54l"), ExtResource("53_qyc2s"), ExtResource("54_0ubp3")])
final_boss = Array[Script]([ExtResource("55_6w50q"), ExtResource("56_vtmnp"), ExtResource("57_r1is8")])
secret0 = Array[Script]([ExtResource("58_b13ri"), ExtResource("58_r1is8"), ExtResource("60_3i8p7")])
secret1 = Array[Script]([ExtResource("61_x2hlo"), ExtResource("62_wr3iy"), ExtResource("63_7hxv5")])
secret2 = Array[Script]([ExtResource("64_8jj7p"), ExtResource("65_n10w4"), ExtResource("66_n10w4")])
testpool = Array[Script]([ExtResource("35_1mtkp")])

[node name="TextureRect2" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -162.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("58_vtmnp")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -126.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_61r6t")
expand_mode = 2

[node name="Choice1NameLabel" type="Label" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -636.0
offset_top = 48.0
offset_right = -386.0
offset_bottom = 108.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.247059, 0.247059, 0.247059, 1)
theme_override_fonts/font = ExtResource("4_sl0k7")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
autowrap_mode = 3

[node name="BorderChoice1" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 165.0
offset_top = 113.0
offset_right = 415.0
offset_bottom = 363.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_6roal")
expand_mode = 1

[node name="Choice1Portrait" type="TextureRect" parent="BorderChoice1"]
z_index = -1
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 225.0
offset_bottom = 225.0
texture = SubResource("CompressedTexture2D_2ykvl")
expand_mode = 1

[node name="Desc1" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 398.0
offset_right = 427.0
offset_bottom = 672.0
theme_override_colors/default_color = Color(0.247059, 0.247059, 0.247059, 1)
theme_override_fonts/normal_font = ExtResource("4_sl0k7")
theme_override_font_sizes/normal_font_size = 16

[node name="Choice2NameLabel" type="Label" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -140.0
offset_top = 41.0
offset_right = 110.0
offset_bottom = 101.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.247059, 0.247059, 0.247059, 1)
theme_override_fonts/font = ExtResource("4_sl0k7")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
autowrap_mode = 3

[node name="BorderChoice2" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 658.0
offset_top = 105.0
offset_right = 908.0
offset_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_6roal")
expand_mode = 1

[node name="Choice2Portrait" type="TextureRect" parent="BorderChoice2"]
z_index = -1
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 225.0
offset_bottom = 225.0
texture = SubResource("CompressedTexture2D_2ykvl")
expand_mode = 1

[node name="Choice3NameLabel" type="Label" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 361.0
offset_top = 59.0
offset_right = 611.0
offset_bottom = 119.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.247059, 0.247059, 0.247059, 1)
theme_override_fonts/font = ExtResource("4_sl0k7")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
autowrap_mode = 3

[node name="Desc2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 391.0
offset_right = 927.0
offset_bottom = 665.0
theme_override_colors/default_color = Color(0.247059, 0.247059, 0.247059, 1)
theme_override_fonts/normal_font = ExtResource("4_sl0k7")
theme_override_font_sizes/normal_font_size = 16

[node name="BorderChoice3" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 1161.0
offset_top = 123.0
offset_right = 1411.0
offset_bottom = 373.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_6roal")
expand_mode = 1

[node name="Choice3Portrait" type="TextureRect" parent="BorderChoice3"]
z_index = -1
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 225.0
offset_bottom = 225.0
texture = SubResource("CompressedTexture2D_2ykvl")
expand_mode = 1

[node name="Desc3" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 1148.0
offset_top = 397.0
offset_right = 1435.0
offset_bottom = 671.0
theme_override_colors/default_color = Color(0.247059, 0.247059, 0.247059, 1)
theme_override_fonts/normal_font = ExtResource("4_sl0k7")
theme_override_font_sizes/normal_font_size = 16

[node name="Pick1" type="Button" parent="."]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1473.0
offset_top = 363.0
offset_right = -1173.0
offset_bottom = 413.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.247059, 0.247059, 0.247059, 1)
theme_override_fonts/font = ExtResource("4_sl0k7")
theme_override_font_sizes/font_size = 22
theme_override_styles/hover = SubResource("StyleBoxTexture_bmntv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xe5f2")
theme_override_styles/normal = SubResource("StyleBoxTexture_cgh2f")
text = "Battle"

[node name="Pick2" type="Button" parent="."]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -959.0
offset_top = 360.0
offset_right = -659.0
offset_bottom = 410.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.247059, 0.247059, 0.247059, 1)
theme_override_fonts/font = ExtResource("4_sl0k7")
theme_override_font_sizes/font_size = 22
theme_override_styles/hover = SubResource("StyleBoxTexture_bmntv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xe5f2")
theme_override_styles/normal = SubResource("StyleBoxTexture_cgh2f")
text = "Battle"

[node name="Pick3" type="Button" parent="."]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -458.0
offset_top = 367.0
offset_right = -158.0
offset_bottom = 417.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.247059, 0.247059, 0.247059, 1)
theme_override_fonts/font = ExtResource("4_sl0k7")
theme_override_font_sizes/font_size = 22
theme_override_styles/hover = SubResource("StyleBoxTexture_bmntv")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xe5f2")
theme_override_styles/normal = SubResource("StyleBoxTexture_cgh2f")
text = "Battle"
